--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,44 +1,61 @@
+ci:
+  autofix_commit_msg: |
+    chore: autofix via pre-commit hooks
+
+    for more information, see https://pre-commit.ci
+  autoupdate_commit_msg: |
+    chore: autoupdate pre-commit hooks
+
+    for more information, see https://pre-commit.ci
+
 repos:
+  # security
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: v8.24.0
+    hooks:
+      - id: gitleaks
+        fail_fast: true
+  # formatters & fixers
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+    hooks:
+      - id: trailing-whitespace
+  - repo: https://github.com/rbubley/mirrors-prettier
+    rev: "v3.5.3"
+    hooks:
+      - id: prettier
+        types_or: [yaml, markdown, html, css, scss, javascript, json]
+  - repo: https://github.com/scop/pre-commit-shfmt
+    rev: v3.11.0-1
+    hooks:
+      - id: shfmt
+  # configuration validation
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: "0.31.3"
+    hooks:
+      - id: check-dependabot
+      - id: check-github-workflows
+  # general checks & linting
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
       - id: check-added-large-files
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: check-yaml
+      - id: debug-statements
       - id: mixed-line-ending
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.21.2
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.30.2
     hooks:
-      - id: gitleaks
+      - id: typos
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
     hooks:
       - id: shellcheck
   - repo: https://github.com/DavidAnson/markdownlint-cli2
-    rev: v0.16.0
+    rev: v0.17.2
     hooks:
       - id: markdownlint-cli2
         args: ["--config", ".markdownlint.yml"]
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
-    hooks:
-      - id: python-check-blanket-noqa
-      - id: python-check-blanket-type-ignore
-      - id: python-use-type-annotations
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.3
-    hooks:
-      - id: ruff
-        types_or: [python, toml]
-        args: [--fix]
-      - id: ruff-format
-        types_or: [python, toml]
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        types_or: [json, yaml]
-  - repo: https://github.com/crate-ci/typos
-    rev: v1.28.3
-    hooks:
-      - id: typos
