--- a/.editorconfig
+++ b/.editorconfig
@@ -2,9 +2,21 @@ root = true
 
 [*]
 end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.sh]
 indent_size = 2
 indent_style = space
-insert_final_newline = true
 space_redirects = true
 switch_case_indent = true
-trim_trailing_whitespace = true
+
+[.githooks/*]
+indent_size = 2
+indent_style = space
+space_redirects = true
+switch_case_indent = true
+
+[*.{conf,java,js,json,jsp,php,tf,ts,xml,yaml,yml}]
+indent_size = 2
+indent_style = space
