--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.sh]
+[*.{bash,sh}]
 indent_size = 2
 indent_style = space
 space_redirects = true
