--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{bash,sh}]
+[*.sh]
 indent_size = 2
 indent_style = space
 simplify = true
@@ -16,8 +16,15 @@ switch_case_indent = true
 indent_size = 2
 indent_style = space
 
+[*.{py}]
+indent_size = 4
+indent_style = space
+
 [.githooks/*]
 indent_size = 2
 indent_style = space
 space_redirects = true
 switch_case_indent = true
+
+[Makefile]
+indent_style = tab
