--- a/_typos.toml
+++ b/_typos.toml
@@ -3,3 +3,6 @@ extend-ignore-re = [
     "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
     "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
 ]
+
+[files]
+extend-exclude = [".gitignore"]
