--- a/.github/workflows/pre-commit-autoupdate.yml
+++ b/.github/workflows/pre-commit-autoupdate.yml
@@ -1,8 +1,8 @@
 name: pre-commit autoupdate
 
 on:
-  # schedule:
-  #   - cron: "0 0 * * 1" # Run every Monday at 00:00
+  schedule:
+    - cron: "0 0 * * 1" # Run every Monday at 00:00
   workflow_dispatch:
 
 permissions:
