--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           cache: "pip"
           check-latest: true
+          python-version: "3.x"
       - name: Install pre-commit
         run: |
           python3 -m pip install --upgrade pip
