--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,9 +26,17 @@ jobs:
       - uses: actions/checkout@v6
       - name: Setup BATS
         uses: bats-core/bats-action@3.0.1
-      - name: Install GNU parallel (macOS only)
+      - name: Install bash 4+ and GNU parallel (macOS only)
         if: matrix.os == 'macos-latest'
-        run: brew install parallel
+        run: |
+          brew install bash parallel
+          echo "$(brew --prefix)/bin" >> "$GITHUB_PATH"
+      - name: Verify bash version
+        if: matrix.os == 'macos-latest'
+        run: |
+          /usr/bin/env bash --version
+          echo "Bash path: $(which bash)"
+          echo "Bash version check: $(/usr/bin/env bash -c "echo \$BASH_VERSION")"
       - name: Run BATS tests
         run: bats --jobs 4 --timing tests/*.bats
 
