--- a/_typos.toml
+++ b/_typos.toml
@@ -1,8 +1,6 @@
 [default]
-extend-ignore-re = [
-    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
-    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
-]
+extend-ignore-re       = ['(?Rm)^.*(#|//)\\s*spellchecker:disable-line$']
+extend-ignore-words-re = ['arange']
 
 [files]
-extend-exclude = [".gitignore"]
+extend-exclude = ['.gitignore']
